--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <base href="/" />
+    <link rel="icon" type="image/png" href="./public/favicon.ico" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="">
+    <link rel="apple-touch-icon" href="./public/apple-touch-icon.png" />
+    <link rel="manifest" href="./public/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TrackAlways</title>
+    <title>Track Always | Fleet</title>
   </head>
   <body>
     <div id="root"></div>
