--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <base href="/" />
-    <link rel="icon" type="image/png" href="./public/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     <meta name="description" content="" />
     <meta name="keywords" content="">
-    <link rel="apple-touch-icon" href="./public/apple-touch-icon.png" />
-    <link rel="manifest" href="./public/manifest.json" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Track Always | Fleet</title>
   </head>
